<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ConteinerActivityPrincipal"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_background"
    android:orientation="vertical"
    tools:context=".ActivityPrincipal">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@drawable/top_bar_theme"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

    </com.google.android.material.appbar.AppBarLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button1"

                style="@style/ButtonProjectStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/button_background_theme"
                android:onClick="onClick"
                android:shadowRadius="3"
                android:text="@string/bt1" />


            <Button
                android:id="@+id/button2"
                style="@style/ButtonProjectStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/button_background_theme"
                android:onClick="onClick"
                android:text="@string/bt2" />

            <Button
                android:id="@+id/button3"
                style="@style/ButtonProjectStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/button_background_theme"
                android:onClick="onClick"
                android:text="@string/bt3" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button4"
                style="@style/ButtonProjectStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/button_background_theme"
                android:onClick="onClick"
                android:text="@string/bt4" />

            <Button
                android:id="@+id/button5"
                style="@style/ButtonProjectStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/button_background_theme"
                android:onClick="onClick"
                android:text="@string/bt5" />

            <Button
                android:id="@+id/button6"
                style="@style/ButtonProjectStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/button_background_theme"
                android:onClick="onClick"
                android:text="@string/bt6" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button7"
                style="@style/ButtonProjectStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/button_background_theme"
                android:onClick="onClick"
                android:text="@string/bt7" />

            <Button
                android:id="@+id/button8"
                style="@style/ButtonProjectStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/button_background_theme"
                android:onClick="onClick"
                android:text="@string/bt8" />

            <Button
                android:id="@+id/button9"
                style="@style/ButtonProjectStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/button_background_theme"
                android:onClick="onClick"
                android:text="@string/bt9" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button0"
                style="@style/ButtonProjectStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/button_background_theme"
                android:foregroundGravity="center"
                android:gravity="center"
                android:onClick="onClick"
                android:text="@string/bt0" />

            <Button
                android:id="@+id/btApaga"
                style="@style/ButtonProjectStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:background="@drawable/button_background_theme"
                android:cursorVisible="true"
                android:foregroundGravity="fill_vertical"
                android:onClick="onClick"
                android:text="@string/btApaga" />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/ConteinerSelecao"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"></LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        android:foregroundGravity="clip_horizontal"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textViewFrase"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:onClick="onClick"
            android:text="@string/textonulo"
            android:textColor="@color/black"
            android:textSize="20sp" />
    </LinearLayout>
</LinearLayout>